Pridana barva pozadi, fonty, logo hlavicky

--- a/web/index.html
+++ b/web/index.html
@@ -7,14 +7,14 @@
     <title>Saturejka</title>
   </head>
   <body>
-    <header>
-      <h1>Saturejka</h1>
+    <header class="header">
+      <img src="img/logo.png" alt="Logo saturejka">
       <p>
         Přijďte se potěšit naši chutnou a originální kuchyní v příjemném a milém
         prostředí.
       </p>
     </header>
-    <main>
+    <main class="main_page">
       <div class="home_page">
         <h1>Naše nabídka</h1>
         <p>
