--- a/web/index.html
+++ b/web/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/logo.png" alt="Logo saturejka">
-      <p>
-        Přijďte se potěšit naši chutnou a originální kuchyní v příjemném a milém
-        prostředí.
-      </p>
+      <div class=header_container>
+        <img src="img/logo.png" alt="Logo saturejka">
+        <p>
+          Přijďte se potěšit naši chutnou a originální kuchyní v příjemném a milém
+          prostředí.
+        </p>
+      </div>
+
     </header>
     <main class="main_page">
       <div class="home_page">
