--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
         <div class="offer_header">
           <h1>Naše nabídka</h1>
           <p>
-            Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
+            Vybraná jídla z našeho jarního menu připravená našimi prvotřídními
             šefkuchaři.
         </div>
           <div class="offer_photos">
@@ -32,24 +32,24 @@
           </div>
           <div class="offer_text">
             <div class="container1">
-              <div class="paragraph1">
+              <div class="paragraph">
                 <p>
                   Architektonický skvost láká své hosty atmosférou ve stylu Grand Café již od roku 1922 nejen unikátními keramickými dekoracemi. Kvalitní servis, prvotřídní kuchyně a dostupné ceny v luxusním prostředí - to je restaurace Saturejka.
                 </p>
               </div>
-              <div class="paragraph2">
+              <div class="paragraph">
                 <p>
                   Jedinečný kulinářský zážitek z jídla v naší restauraci je umocněn prémiovým porcelánem značky Vilém & Švec. Klasická, elegantní a přitom dokonale nadčasová kolekce vás nadchne stejně jako nás. Těšíme se na vaši návštěvu!
                 </p>
               </div>
             </div>
             <div class="container2">
-              <div class="paragraph3">
+              <div class="paragraph">
                 <p>
                   Saturejka není jen restaurace, ale také kavárna, která navazuje na svou slávu z první republiky. Naše dorty jsou výjimečné svou chutí a jsou vyrobeny z prvotřídních surovin. Dort si můžete vychutnat v krásném prostředí našeho vnitrobloku nebo si jej odnést s sebou.
                 </p>
               </div>
-              <div class="paragraph4">
+              <div class="paragraph">
                 <p>
                   Saturejka a její privátní salonky jsou dokonalým místem pro setkání, oslavy či firemní akce. 
                 </p>
@@ -58,27 +58,33 @@
           </div>
       </div>
       <div class="menu">
-        <div>
-          <img src="img/dish1.jpg" alt="Dish photo">
-          <h2>Losos se zeleninou</h2>
-          <p>Je libo lehčí večeře? Nač hledat, když ji pro vás máme už připravenou! Vyzkoušejte pečeného lososa na bylinkách s dušenou jarní zeleninou a bylinkovým máslem,. Veškeré ryby objednáváme čerstvé u prémiových a ověřených dodavatelů.</p>
-          <button>ZOBRAZIT MENU</button>
+        <div class="container3">
+          <img class="dish1" src="img/dish1.jpg" alt="Dish photo">
+          <div class="menu_text1">
+            <h2>Losos se zeleninou</h2>
+            <p>Je libo lehčí večeře? Nač hledat, když ji pro vás máme už připravenou! Vyzkoušejte pečeného lososa na bylinkách s dušenou jarní zeleninou a bylinkovým máslem,. Veškeré ryby objednáváme čerstvé u prémiových a ověřených dodavatelů.</p>
+            <button>ZOBRAZIT MENU</button>
+          </div>
         </div>
-        <div>
-          <img src="img/dish2.jpg" alt="Dish photo">
-          <h2>Kuřecí tagliatelle</h2>
-          <p>Pochutnejte si na našem tagliatelle s kuřecím masem s bazalkou a smetanovou omáčkou. Vynikající lehký oběd pro slunné jarní dny. Kuřecí maso pochuzí od lokálních dodavatelů z kuřat chovaných pod širým nebem. Těstoviny vyrábíme ručně přimo u nás. </p>
-          <button>ZOBRAZIT MENU</button>
+        <div class="container4">
+          <img class="dish2" src="img/dish2.jpg" alt="Dish photo">
+          <div class="menu_text2">
+            <h2>Kuřecí tagliatelle</h2>
+            <p>Pochutnejte si na našem tagliatelle s kuřecím masem s bazalkou a smetanovou omáčkou. Vynikající lehký oběd pro slunné jarní dny. Kuřecí maso pochuzí od lokálních dodavatelů z kuřat chovaných pod širým nebem. Těstoviny vyrábíme ručně přimo u nás. </p>
+            <button>ZOBRAZIT MENU</button>
+          </div>
         </div>
-        <div>
-          <img src="img/dish3.jpg" alt="Dish photo">
-          <h2>Sladká melancholie</h2>
-          <p>Připomeňte si atmosféru sluncem zalité Provence díky jedinečené sladkokyselé chuťi našeho ctironového dortu s polevou z bílé čokolády. Vychutnejte si jej spolu s hrnkem dobré kávy na naší vnitroblokové zahrádce, která poskytuje útočiště před ruchem velkoměsta.</p>
-          <button>ZOBRAZIT MENU</button>
+        <div class="container5">
+          <img class="dish3" src="img/dish3.jpg" alt="Dish photo">
+          <div class="menu_text3">
+            <h2>Sladká melancholie</h2>
+            <p>Připomeňte si atmosféru sluncem zalité Provence díky jedinečené sladkokyselé chuťi našeho ctironového dortu s polevou z bílé čokolády. Vychutnejte si jej spolu s hrnkem dobré kávy na naší vnitroblokové zahrádce, která poskytuje útočiště před ruchem velkoměsta.</p>
+            <button>ZOBRAZIT MENU</button>
+          </div>
         </div>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <p>Veškerý obsah těchto webových stránek je zcela smyšlený a určený pouze pro studijní účely Czechitas Digitální akademie Web. Jakákoliv podobnost s již existujícími stránkami je čistě náhodná.</p>
     </footer>
 
